@@ -52,6 +52,7 @@ final class HistoryModel extends Item
 	
 	static final LongField itemCacheHits = new LongField().toFinal();
 	static final LongField itemCacheMisses = new LongField().toFinal();
+	static final LongField itemCacheConcurrentLoads = new LongField().toFinal();
 	static final IntegerField itemCacheNumberOfCleanups = new IntegerField().toFinal().min(0);
 	static final IntegerField itemCacheItemsCleanedUp = new IntegerField().toFinal().min(0);
 	
