@@ -34,6 +34,7 @@ final class ItemCache_Jspm extends Console_Jspm
 			final int allLevel,
 			final long allHits,
 			final long allMisses,
+			final long allConcurrentLoads,
 			final int allReplacementRuns,
 			final int allReplacements,
 			final Date allLastReplacementRun,
@@ -49,6 +50,7 @@ final class ItemCache_Jspm extends Console_Jspm
 			"Level",
 			"Hits",
 			"Misses",
+			"Concurrent Loads",
 			"Replacement Runs",
 			"Replacements",
 			"Last Replacement Run",
@@ -65,6 +67,7 @@ final class ItemCache_Jspm extends Console_Jspm
 			"lv",
 			"ht",
 			"ms",
+			"cl",
 			"rr",
 			"r",
 			"lrr",
@@ -86,6 +89,7 @@ final class ItemCache_Jspm extends Console_Jspm
 						formatAndHide(0, allLevel),
 						formatAndHide(0, allHits),
 						formatAndHide(0, allMisses),
+						formatAndHide(0, allConcurrentLoads),
 						formatAndHide(0, allReplacementRuns),
 						formatAndHide(0, allReplacements),
 						formatAndHide(allLastReplacementRun),
@@ -107,6 +111,7 @@ final class ItemCache_Jspm extends Console_Jspm
 						formatAndHide(0, info.getLevel()),
 						formatAndHide(0, info.getHits()),
 						formatAndHide(0, info.getMisses()),
+						formatAndHide(0, info.getConcurrentLoads()),
 						formatAndHide(0, info.getReplacementRuns()),
 						formatAndHide(0, info.getReplacements()),
 						formatAndHide(info.getLastReplacementRun()),
