@@ -7,6 +7,8 @@ omit bug fixes.
 The items are sorted inversely, i.e. lastest items are on top
 
 --------------------------------------------------------------------------
+* add ItemCacheInfo.getConcurrentLoads()
+	replaces message on System.out: warning: duplicate computation of state ...
 * add SchemaInfo.quoteName
 * remove automatic detection of convert in MediaImageMagickFilter
 	now you need a java system property to enable:
